# docs/swagger.json
@@ -52,6 +52,41 @@
                 }
             }
         },
+        "/delnilai/{id}": {
+            "delete": {
+                "description": "Hapus data nilai.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Nilai"
+                ],
+                "summary": "Delete data nilai.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Masukan ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/ins": {
             "post": {
                 "description": "Input data presensi.",
@@ -85,6 +120,110 @@
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/insnilai": {
+            "post": {
+                "description": "Input data nilai.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Nilai"
+                ],
+                "summary": "Insert data nilai.",
+                "parameters": [
+                    {
+                        "description": "Payload Body [RAW]",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.Nilai"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Nilai"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/nilai": {
+            "get": {
+                "description": "Mengambil semua data nilai.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Nilai"
+                ],
+                "summary": "Get All Data Nilai.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Nilai"
+                        }
+                    }
+                }
+            }
+        },
+        "/nilai/{id}": {
+            "get": {
+                "description": "Ambil per ID data nilai.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Nilai"
+                ],
+                "summary": "Get By ID Data Nilai.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Masukan ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Nilai"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -202,20 +341,196 @@
                     }
                 }
             }
+        },
+        "/updnilai/{id}": {
+            "put": {
+                "description": "Ubah data nilai.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Nilai"
+                ],
+                "summary": "Update data nilai.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Masukan ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Payload Body [RAW]",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.Nilai"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Nilai"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "controller.JamKerja": {
+        "controller.Dosen": {
             "type": "object",
             "properties": {
-                "durasi": {
-                    "type": "integer",
-                    "example": 8
+                "namadosen": {
+                    "description": "ID            primitive.ObjectID `bson:\"_id,omitempty\" json:\"_id,omitempty\"`",
+                    "type": "string",
+                    "example": "Rizkyria"
                 },
-                "gmt": {
-                    "type": "integer",
-                    "example": 7
+                "nik": {
+                    "type": "string",
+                    "example": "123.456.789"
                 },
+                "phonenumberd": {
+                    "type": "string",
+                    "example": "089876543210"
+                }
+            }
+        },
+        "controller.Grade": {
+            "type": "object",
+            "properties": {
+                "namagrade": {
+                    "type": "string",
+                    "example": "A"
+                },
+                "skala": {
+                    "type": "string",
+                    "example": "75.87"
+                }
+            }
+        },
+        "controller.Mahasiswa": {
+            "type": "object",
+            "properties": {
+                "nama": {
+                    "description": "ID           primitive.ObjectID `bson:\"_id,omitempty\" json:\"_id,omitempty\" example:\"123456789\" `",
+                    "type": "string",
+                    "example": "Tes Swagger"
+                },
+                "npm": {
+                    "type": "integer",
+                    "example": 1234567
+                },
+                "phonenumber": {
+                    "type": "string",
+                    "example": "08123456789"
+                }
+            }
+        },
+        "controller.Matakuliah": {
+            "type": "object",
+            "properties": {
+                "jadwal": {
+                    "$ref": "#/definitions/controller.Waktu"
+                },
+                "nama_mk": {
+                    "description": "ID       primitive.ObjectID `bson:\"_id,omitempty\" json:\"_id,omitempty\" example:\"123456789\"`",
+                    "type": "string",
+                    "example": "Pemrograman III"
+                },
+                "pengampu": {
+                    "$ref": "#/definitions/controller.Dosen"
+                },
+                "sks": {
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
+        "controller.Nilai": {
+            "type": "object",
+            "properties": {
+                "absensi": {
+                    "$ref": "#/definitions/controller.Presensi"
+                },
+                "alltugas": {
+                    "description": "ID        primitive.ObjectID `bson:\"_id,omitempty\" json:\"_id,omitempty\"`",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/controller.Tugas"
+                        }
+                    ]
+                },
+                "grade": {
+                    "$ref": "#/definitions/controller.Grade"
+                },
+                "kategori": {
+                    "$ref": "#/definitions/controller.Matakuliah"
+                },
+                "uas": {
+                    "type": "integer",
+                    "example": 123
+                },
+                "uts": {
+                    "type": "integer",
+                    "example": 123
+                }
+            }
+        },
+        "controller.Presensi": {
+            "type": "object",
+            "properties": {
+                "biodata": {
+                    "$ref": "#/definitions/controller.Mahasiswa"
+                },
+                "jumlahkehadiran": {
+                    "description": "ID               primitive.ObjectID `bson:\"_id,omitempty\" json:\"_id,omitempty\"`",
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
+        "controller.Tugas": {
+            "type": "object",
+            "properties": {
+                "tugas1": {
+                    "type": "integer",
+                    "example": 123
+                },
+                "tugas2": {
+                    "type": "integer",
+                    "example": 123
+                },
+                "tugas3": {
+                    "type": "integer",
+                    "example": 123
+                },
+                "tugas4": {
+                    "type": "integer",
+                    "example": 123
+                },
+                "tugas5": {
+                    "type": "integer",
+                    "example": 123
+                }
+            }
+        },
+        "controller.Waktu": {
+            "type": "object",
+            "properties": {
                 "hari": {
                     "type": "array",
                     "items": {
@@ -231,90 +546,13 @@
                         "Minggu"
                     ]
                 },
-                "jam_keluar": {
+                "jamkeluar": {
                     "type": "string",
                     "example": "16:00"
                 },
-                "jam_masuk": {
+                "jammasuk": {
                     "type": "string",
                     "example": "08:00"
-                },
-                "piket_tim": {
-                    "type": "string",
-                    "example": "Piket Z"
-                },
-                "shift": {
-                    "type": "integer",
-                    "example": 2
-                }
-            }
-        },
-        "controller.Karyawan": {
-            "type": "object",
-            "properties": {
-                "hari_kerja": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "example": [
-                        "Senin",
-                        "Selasa",
-                        "Rabu",
-                        "Kamis",
-                        "Jumat",
-                        "Sabtu",
-                        "Minggu"
-                    ]
-                },
-                "jabatan": {
-                    "type": "string",
-                    "example": "Anonymous"
-                },
-                "jam_kerja": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/controller.JamKerja"
-                    }
-                },
-                "nama": {
-                    "description": "ID          primitive.ObjectID `bson:\"_id,omitempty\" json:\"_id,omitempty\" example:\"123456789\"`",
-                    "type": "string",
-                    "example": "Tes Swagger"
-                },
-                "phone_number": {
-                    "type": "string",
-                    "example": "08123456789"
-                }
-            }
-        },
-        "controller.Presensi": {
-            "type": "object",
-            "properties": {
-                "biodata": {
-                    "$ref": "#/definitions/controller.Karyawan"
-                },
-                "checkin": {
-                    "description": "Datetime     primitive.DateTime `bson:\"datetime,omitempty\" json:\"datetime,omitempty\"`",
-                    "type": "string",
-                    "example": "MASUK"
-                },
-                "latitude": {
-                    "type": "number",
-                    "example": 123.11
-                },
-                "location": {
-                    "type": "string",
-                    "example": "Bandung"
-                },
-                "longitude": {
-                    "description": "ID           primitive.ObjectID `bson:\"_id,omitempty\" json:\"_id,omitempty\" example:\"123456789\"`",
-                    "type": "number",
-                    "example": 123.11
-                },
-                "phone_number": {
-                    "type": "string",
-                    "example": "08123456789"
                 }
             }
         }
